Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,14 +7,14 @@
 <h5>Pondělí, 13. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kari polévka s červenou čočkou a slaninou</strong>
+<strong>Zelná s bramborem a vepřovým masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Frankfurtská Vepřová plec s rýží</strong>
+<strong>Mexický guláš s rýží NEBO houskovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
