Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,10 +21,10 @@
 						</span>
 </p>
 <p>
-<strong>Skořicové lívance s borůvkami a sladkým jogurtem</strong>
+<strong>Špagety bolognesse s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							129,-
 						</span>
 </p>
 <p>
