Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,37 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 13.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Tvarožník s rozinkami </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300 ml Bramborová polévka, houby, jarní cibulka samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300 ml Bramborová polévka, houby, jarní cibulka s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí red curry, rýžové nudle, koriandr, smažená cibulka, sezam <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová panenka sous vide, švestková omacka, brambory pečené na másle, kořenová zelenina <em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Cizrnové ragú, omáčka z pečených paprik, restovaný pórek, rýže basmati <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +118,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s citronem a koprovym maslem, bramborovy salat s cervenou repou, cibulkou a majonezou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a koprovym maslem, bramborovy salat s cervenou repou, cibulkou a majonezou 169</li><li>Medailonky z krutich prsou v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Burrito s pikantnimi kancimi nudlickami s fazolemi, pecenymi paprikami a cerstvym chilli, pecene brambory, jogurtovy dip, salatek {L} 169</li><li>Pakora {cizrnove smazenky} s dyni, restovanou cibulkou, paprikami a panc phoron, korenena ryze s cockou, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho okounika a tmave tresky s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 175</li><li>Thajske arasidove kari s veprovym masem, ananasem, bramborami a kokosovym mlekem, jasminova ryze 139</li><li>Spagety s nudlickami hoveziho rostence, pecenou dyni, susenymi rajcaty a cedarem {L} 169</li><li>Indicky dal ze zluteho hrachu s rajcaty, pak coj, ajowanem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
