Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -57,6 +57,11 @@
 <div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Ořechová laskonka s čokoládou bez lepku</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300 ml Bramborová polévka, houby, jarní cibulka samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
