Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -123,7 +123,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho okounika a tmave tresky s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 175</li><li>Thajske arasidove kari s veprovym masem, ananasem, bramborami a kokosovym mlekem, jasminova ryze 139</li><li>Spagety s nudlickami hoveziho rostence, pecenou dyni, susenymi rajcaty a cedarem {L} 169</li><li>Indicky dal ze zluteho hrachu s rajcaty, pak coj, ajowanem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho okounika a tmave tresky s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 175</li><li>Thajske arasidove kari s veprovym masem, ananasem, bramborami a kokosovym mlekem, jasminova ryze 139</li><li>Spagety s nudlickami hoveziho rostence, pecenou dyni, susenymi rajcaty a cedarem {L} 169</li><li>Indicky dal (pikantni) ze zluteho hrachu s rajcaty, pak coj, ajowanem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
