Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,6 +7,13 @@
 <h5>Pondělí, 13. 12. 2021</h5>
 <span class="line"></span>
 <p>
+<strong>❣️❣️❣️V období 20.-24.12. má Aduš s Honzou dovolenou❣️❣️❣️ Budeme se na Vás opět těšit 27.12. ❣️❣️❣️Všem krásné svátky plné pohody❣️❣️❣️</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
 <strong>Zelná s bramborem a vepřovým masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
