Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Zelná s bramborem a vepřovým masem</strong>
+<strong>Frankfurtská</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Mexický guláš s rýží NEBO houskovým knedlíkem</strong>
+<strong>Smažený řízek s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Špagety bolognesse s parmazánem</strong>
+<strong>Croque monsieur s hranolkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							125,-
 						</span>
 </p>
 <p>
