Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -98,7 +98,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho okounika a tmave tresky s pecenymi rajcaty a morskymi rasami, zeleninovy kuskus, salatek {L} 175</li><li>Thajske arasidove kari s veprovym masem, ananasem, bramborami a kokosovym mlekem, jasminova ryze 139</li><li>Spagety s nudlickami hoveziho rostence, pecenou dyni, susenymi rajcaty a cedarem {L} 169</li><li>Indicky dal (pikantni) ze zluteho hrachu s rajcaty, pak coj, ajowanem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny pstruh} s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 175</li><li>Ramen s opekanym secuanskym veprovym, sazenym vejcem, pak coj a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami 139</li><li>Burger s trhanou pecenou kachnou, pekingskym zelim, rajcetem, barbecue majonezou a cibulovou marmeladou, pecene baby brambory, salatek {L} 169</li><li>Maghrebska zapecena saksuka s vejci, rajcaty, paprikami a balkanskym syrem, zeleninovy kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
