Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -59,7 +59,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 14.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Ořechovo-kokosová bábovka</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Laskonka s ořechy </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka, klobása, zakysaná smetana- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka, klobása, zakysaná smetana- s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí vídeňská roštěná, šťouchané brambory s jarní cibulkou, zakysaná smetana <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí špíz, sušená rajčata, žampiony, zapečená polenta, bazalková omáčka, ořechový crumble <em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Stir fry rýže se zeleninou, vajíčko, koriandr, sezam <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -98,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny pstruh} s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 175</li><li>Ramen s opekanym secuanskym veprovym, sazenym vejcem, pak coj a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami 139</li><li>Burger s trhanou pecenou kachnou, pekingskym zelim, rajcetem, barbecue majonezou a cibulovou marmeladou, pecene baby brambory, salatek {L} 169</li><li>Maghrebska zapecena saksuka s vejci, rajcaty, paprikami a balkanskym syrem, zeleninovy kuskus, salatek {L} 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny pstruh} s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 175</li><li>Ramen s opekanym secuanskym veprovym, sazenym vejcem, pak coj a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami   ( L )  139</li><li>Burger s trhanou pecenou kachnou, pekingskym zelim, rajcetem, barbecue majonezou a cibulovou marmeladou, pecene baby brambory, salatek {L} 169</li><li>Maghrebska zapecena saksuka s vejci, rajcaty, paprikami a balkanskym syrem, zeleninovy kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
