--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -59,7 +59,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 15.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Perníkový koláč s čokoládou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechovo-kokosová bábovka</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- s menu</div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Řecký biftek, tzatziki, pečené batáty, nakládaná cibule  <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na medu, mrkvová omáčka s chilli,  rýže, petržel <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Tortilla wrap s halloumi sýrem, fazole, zelenina, rajčatová salsa, trhaný salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
