Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -136,7 +136,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny pstruh} s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s jogurtovou bylinkovou omackou, pecene baby brambory, salatek 175</li><li>Ramen s opekanym secuanskym veprovym, sazenym vejcem, pak coj a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami   ( L )  139</li><li>Burger s trhanou pecenou kachnou, pekingskym zelim, rajcetem, barbecue majonezou a cibulovou marmeladou, pecene baby brambory, salatek {L} 169</li><li>Maghrebska zapecena saksuka s vejci, rajcaty, paprikami a balkanskym syrem, zeleninovy kuskus, salatek {L} 139</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene repy, citron {L} 139</li><li>Peceny cerstvy sumec s citronem a kaparovo-koprovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Burrito s krutimi gyros nudlickami, rajcaty a pekingskym zelim, korenena ryze s fazolemi, okurkove tzatziki, salatek {L} 139</li><li>Uzena prsicka z divoke kachny s visnovou omackou, gratinovane brambory, salatek 169</li><li>Pikantni pecene tofu se zeleninou a ananasem ve sladke chilli omacce se zazvorem a prazenym sezamem, jasminova ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
