Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Frankfurtská</strong>
+<strong>Vývar se zeleninou a vepřovým masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený řízek s bramborovou kaší a okurkou</strong>
+<strong>Vepřová líčka na vině s rýží a kořenovou zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Croque monsieur s hranolkami</strong>
+<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou NEBO řepou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							129,-
 						</span>
 </p>
 <p>
